fix modal z-index

--- a/src/layouts/MainLayout/MainLayout.scss
+++ b/src/layouts/MainLayout/MainLayout.scss
@@ -137,7 +137,7 @@
 
 .menu-sm {
   position: absolute;
-  z-index: 6;
+  z-index: 4;
   top: 100px;
   left: 0;
   right: 0;
