--- a/src/partials/Navbar/Navbar.scss
+++ b/src/partials/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
   padding: 0;
   padding-left: 60px !important;
   padding-right: 60px !important;
-  z-index: 7;
+  z-index: 5;
   width: 100%;
   top: 0;
 
